[package]
name = "dx-cover-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
