[package]
name = "dx-cover-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.5.40", features = ["derive"] }
indexmap = { version = "2.10.0", features = ["serde"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
